@@ -4,6 +4,8 @@ Revision history for Perl extension Devel::Size.
  * Fix potential SEGVs for OP_AELEMFAST on a lexical (eg $foo[3])
  * Fix likely SEGVs for PVOPs (missing break)
  * Fix potential SEGVs for PVBMs on 5.10 and later
+ * Move hash and array traversal from total_size() to sv_size()
+   - this allows total_size() and size() to be XS ALIASes.
 
 0.74_51 2011-04-22 nicholas
  * Don't count PL_sv_{undef,no,yes} in the size returned
